# java_rust

./: .gitignore  README.md  build.gradle  settings.gradle
app-java/: build.gradle
app-java/src/main/java/java_rust/: JnaFfiExample.java  Main.java
app-rust/: Cargo.toml  build.rs
app-rust/app-native/: Cargo.toml
app-rust/app-native/src/: lib.rs
app-rust/app-wasm/: Cargo.toml
app-rust/app-wasm/src/: lib.rs
app-rust/copied_protos/: commands.proto  message_ffi.proto
app-rust/src/: lib.rs
app-www/: README.md  index.js  package-lock.json  package.json
java-rust-proto-ffi/: build.gradle
java-rust-proto-ffi/src/main/java/java_rust/: ProtoFfiHelper.java  RustBuffer.java
rust-proto-ffi/: Cargo.toml  build.rs
rust-proto-ffi/native-bindings/: Cargo.toml
rust-proto-ffi/native-bindings/src/: core.rs  lib.rs
rust-proto-ffi/src/: core.rs  lib.rs
rust-proto-ffi/wasm-bindings/: .gitignore  Cargo.toml  LICENSE_MIT
rust-proto-ffi/wasm-bindings/src/: lib.rs
