[package]
name = "app-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
proto-ffi = { version = "0.1.0", path = "../rust-proto-ffi" }
prost = "0.9.0"
prost-types = "0.9.0"

[build-dependencies]
prost-build = "0.9.0"
prost-types = "0.9.0"
prost = "0.9.0"
quote = "1.0.10"
heck = "0.3.3"