[package]
name = "proto-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
state = "0.5.2"
bytes = "1.1.0"
prost = "0.9.0"
prost-types = "0.9.0"
evmap = "10.0.2"
evmap-derive = "0.2.0"

[build-dependencies]
prost-build = "0.9.0"
prost-types = "0.9.0"
prost = "0.9.0"
quote = "1.0.10"
heck = "0.3.3"