[package]
name = "app-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-rust = { version = "0.1.0", path = "../../app-rust" }
native-bindings = { version = "0.1.0", path = "../../rust-proto-ffi/native-bindings" }