[package]
name = "native-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bytes = "1.1.0"
prost = "0.9.0"
ffi-support = "0.4.4"
proto-ffi = { version = "0.1.0", path = ".." }

[build-dependencies]
prost-build = "0.9.0"